HighContrast: Fix titlebar containing >1 headerbar
by migrating the relevant code from Adwaita, to dodge unwanted doubling
up of the bottom border and such.

It also hopefully still encompasses whatever commit
b4371728deda7041ec309a517e221b0e68768a94 was trying to do; certainly, it
retains the resolution of the main bug/patch that one was attached with.

https://bugzilla.gnome.org/show_bug.cgi?id=769877

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1195,7 +1195,7 @@ searchbar {
  * Header bars *
  ***************/
 
-.titlebar:not(headerbar),
+%titlebar,
 headerbar {
   min-height: 46px;
   border-width: 0 0 1px;
@@ -1280,6 +1280,21 @@ headerbar {
     }
   }
 }
+
+.titlebar:not(headerbar) {
+  window.csd > & {
+    // in csd we assume every titlebar is a headerbar so reset anything, this is needed for split toolbars cases
+    padding: 0;
+    background-color: transparent;
+    background-image: none;
+    border-style: none;
+    border-color: transparent;
+    box-shadow: none;
+  }
+
+  @extend %titlebar;
+}
+
 
 /************
  * Pathbars *
